# hb-market-connector

./: .gitignore  .release-please-config.json  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-please.yml  security.yml
market_connector/: __init__.py  exceptions.py  live_market_access.py  orders.py  primitives.py  protocols.py
market_connector/auth/: declarative.py  passthrough.py  protocols.py  schemes.py  spec.py  substitute.py
market_connector/contracts/: __init__.py  dispatch.py  instrument.py  protocols.py
market_connector/exchanges/: __init__.py
market_connector/hb_compat/: __init__.py  bridge.py
market_connector/rate_limits/: __init__.py  flat.py  pool.py  tiered.py
market_connector/symbols/: __init__.py  mapper.py
market_connector/testing/: __init__.py  contract.py  mock_transport.py  spec_fixtures.py
market_connector/transport/: __init__.py  dispatch.py  endpoint.py  errors.py  protocols.py  response.py  rest_base.py  token_bucket.py  ws_base.py
market_connector/ws_models/: __init__.py  auth_models.py  decoder.py
tests/: test_phase_a_integration.py  test_transport_aware_gateway.py
tests/auth/: test_passthrough.py
tests/contract/: test_rate_limit_conformance.py  test_signer_conformance.py  test_symbol_mapper_conformance.py  test_ws_auth_conformance.py  test_ws_decoder_conformance.py
tests/contracts/: test_dispatch.py  test_instrument.py  test_protocols.py
tests/transport/: test_dispatch.py  test_protocols.py
tests/unit/: test_contract_base.py  test_decode_body.py  test_endpoint.py  test_errors.py  test_exceptions.py  test_hb_compat.py  test_live_market_access.py  test_placeholder.py  test_primitives.py  test_protocols.py  test_response.py  test_rest_base.py  test_token_bucket.py  test_ws_base.py
(+135 files in other folders)
